llvm/test/tools/llubi/inttoptr_ptrtoint_wrong_as.ll
; NOTE: Assertions have been autogenerated by utils/update_llubi_test_checks.py UTC_ARGS: --version 6
; RUN: not llubi --verbose < %s 2>&1 | FileCheck %s

target datalayout = "e-p:64:64:64"

define void @main() {
  %alloc = alloca i32
  %off = ptrtoint ptr %alloc to i64
  %cast = inttoptr i64 %off to ptr addrspace(1)
  store i32 0, ptr addrspace(1) %cast
  ret void
}
; CHECK: Entering function: main
; CHECK-NEXT:   %alloc = alloca i32, align 4 => ptr 0x8 [alloc]
; CHECK-NEXT:   %off = ptrtoint ptr %alloc to i64 => i64 8
; CHECK-NEXT:   %cast = inttoptr i64 %off to ptr addrspace(1) => ptr 0x8 [wildcard]
; CHECK-NEXT: Stacktrace:
; CHECK-NEXT: #0   store i32 0, ptr addrspace(1) %cast, align 4 at @main <stdin>:10
; CHECK-NEXT: Immediate UB detected: Invalid memory access via a pointer with nullary provenance.
; CHECK-NEXT: error: Execution of function 'main' failed.
